--- a/html/list.html
+++ b/html/list.html
@@ -67,12 +67,13 @@
 
 					</menu>
 				</div>
-				<a href="/go_full" class="button_big">MAKE A VIDEO</a>
+				<a href="/go_full?tray=custom" class="button_big">MAKE A WODE</a>												
+				<a href="/go_full?tray=custom" class="button_big">MAKE A VIDEO</a>
 			</div>
 		</div>
 		<div class="warning">
-			GoAnimate Remastered is currently in Public Beta testing. Please expect bugs, downtime, video deletion, and missing features.
-			It is recomended you download your videos .xml files to back them up.<br>
+			GoAnimate Remastered is DMCA takedown is Wrapper Offline/Wrapper Online is the videomakers<br>
+			
 		</div>
 	</header>
 	<table>
@@ -81,7 +82,7 @@
 				<td></td>
 				<td>Video Title</td>
 				<td>Last Modified</td>
-				<td></td>
+				<h2>Your Videos making GoAnimate Remastered</h2>
 			</tr>
 		</thead>
 		<tbody></tbody>
